# ray-tracing

c++/: CMakeLists.txt  Makefile
c++/src/: camera.cpp  camera.h  color.h  hittable.h  hittable_list.cpp  hittable_list.h  main.cpp  material.h  ray.cpp  ray.h  sphere.cpp  sphere.h  tests.cpp  unittests.cpp  utils.h  vec3.cpp  vec3.h
rust/src/: color.rs  main.rs  ray.rs  vec3.rs
